🚧 show products list

--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -1,18 +1,14 @@
-.app-layout .logo {
-  float: right;
-  width: 75px;
-  height: 31px;
-  margin: 16px 0 16px 16px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .app-layout .help-icon,
 .app-layout .cart-icon {
   width: 30px;
   height: 30px;
   cursor: pointer;
+}
+
+.app-header {
+  display: flex;
+  align-items: center;
+  padding: 0 25px !important;
 }
 
 .app-layout .help-icon {
@@ -21,5 +17,6 @@
 
 .app-layout .cart-icon {
   fill: white;
+  margin-left: 1rem;
 }
 
